manifest/coturn-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: coturn
  labels:
    io.openvidu.service: coturn
  name: coturn
spec:
  replicas: 1
  selector:
    matchLabels:
      io.openvidu.service: coturn
  strategy: {}
  template:
    metadata:
      annotations:
        app: conturn
      labels:
        io.openvidu.service: coturn
    spec:
      serviceAccount: openvidu 
      serviceAccountName: openvidu
      containers:
        - args:
            - --log-file=stdout
            - --listening-port=3478
            - --listening-ip=0.0.0.0
            - --external-ip=a33c67c8853a642d7a1e921136891566-a90f0f017e3c21a8.elb.us-east-2.amazonaws.com
            - --no-tls
            - --no-dtls
            - --fingerprint
            - --lt-cred-mech
            - --min-port=49152
            - --max-port=49153
            - --realm=openvidu-openvidu.apps.cluster-68v6c.68v6c.sandbox1604.opentlc.com
            - --user=myopenvidu:vrtest123
            - --verbose
          env:
            - name: DB_NAME
              value: "0"
            - name: DB_PASSWORD
              value: vrtest123
            - name: REDIS_IP
              value: redis 
          image: openvidu/openvidu-coturn:6.0.0
          name: coturn
          ports:
            - containerPort: 3478
              name: udp-3478
              protocol: UDP 
            - containerPort: 49152
              name: udp-49152
              protocol: UDP
            - containerPort: 49153
              name: udp-49153
              protocol: UDP
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app: coturn
    service.beta.kubernetes.io/aws-load-balancer-type: nlb 
    traffic-policy.network.alpha.openshift.io/local-with-fallback: ""
  labels:
    io.openvidu.service: coturn
  name: coturn
spec:
  type: LoadBalancer 
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Local
  ports:
  - name: udp-3478
    port: 3478
    targetPort: udp-3478
    protocol: UDP
  - name: udp-49152
    port: 49152
    targetPort: udp-49152
    protocol: UDP 
  - name: udp-49153
    port: 49153
    targetPort: udp-49153
    protocol: UDP
  selector:
    io.openvidu.service: coturn
