manifest/kms-deployment.yaml
apiVersion: apps/v1
kind: StatefulSet 
metadata:
  annotations:
    app: kurento
  labels:
    io.openvidu.service: kurento 
  name: kurento
spec:
  serviceName: "kurento"
  replicas: 1
  selector:
    matchLabels:
      io.openvidu.service: kurento 
  template:
    metadata:
      annotations:
        app: kurento
      labels:
        io.openvidu.service: kurento 
    spec:
      #hostNetwork: true
      serviceAccount: openvidu 
      serviceAccountName: openvidu
      containers:
        - env:
            - name: GST_DEBUG
              value: 1,Kurento*:5,kms*:5,sdp*:5,webrtc*:5,*rtpendpoint:5,rtp*handler:5,rtpsynchronizer:5,agnosticbin:5
            - name: KMS_MAX_PORT
              value: "40001"
            - name: KMS_MIN_PORT
              value: "40000"
            - name: KURENTO_LOGS_PATH
              value: /opt/openvidu/kurento-logs
            - name: KURENTO_LOG_FILE_SIZE
              value: "100"
            - name: KMS_TURN_URL
              value: "myopenvidu:vrtest123@aa1e14c92c9964558a30456e977707f7-979d08e72941d124.elb.us-east-2.amazonaws.com:3489"
            - name: KMS_STUN_IP
              value: "aa1e14c92c9964558a30456e977707f7-979d08e72941d124.elb.us-east-2.amazonaws.com"
            - name: KMS_STUN_PORT
              value: "3489"
          image: kurento/kurento-media-server:6.16.0
          name: kurento 
          ports:
            - containerPort: 8888 
              name: kms-listen
              protocol: TCP
      restartPolicy: Always
        
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app: kurento
#  #  service.beta.kubernetes.io/aws-load-balancer-type: nlb 
#  #  traffic-policy.network.alpha.openshift.io/local-with-fallback: ""
  labels:
    io.openvidu.service: kurento 
  name: kurento 
spec:
  clusterIP: None 
  ports:
    - name: kms-listen
      port: 8888
      targetPort: kms-listen
  selector:
    io.openvidu.service: kurento
