manifest/loopback-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: loopback
  labels:
    app: loopback
spec:
  type: ClusterIP
  selector:
    app: loopback
  ports:
  - port: 3000
    targetPort: loopback
    name: loopback
