manifest/openvidu-server-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    app: openvidu-server
  labels:
    io.openvidu.service: openvidu-server
  name: openvidu-server
spec:
  replicas: 1
  selector:
    matchLabels:
      io.openvidu.service: openvidu-server
  strategy: {}
  template:
    metadata:
      annotations:
        app: openvidu-server
      labels:
        io.openvidu.service: openvidu-server
    spec:
      serviceAccount: openvidu 
      serviceAccountName: openvidu
      containers:
        - command:
            - /usr/local/bin/entrypoint.sh
          env:
            - name: OPENVIDU_WEBRTC_ICE_SERVERS
              value: '["url=turns:aa1e14c92c9964558a30456e977707f7-979d08e72941d124.elb.us-east-2.amazonaws.com:3489,username=myopenvidu,credential=vrtest123"]'
            - name: CERTIFICATE_TYPE
              value: letsencrypt
            - name: COTURN_IP
              value: aa1e14c92c9964558a30456e977707f7-979d08e72941d124.elb.us-east-2.amazonaws.com
            - name: COTURN_PORT
              value: "3489"
            - name: COTURN_REDIS_IP
              value: redis
            - name: COTURN_REDIS_PASSWORD
              value: vrtest123
            - name: DOMAIN_OR_PUBLIC_IP
              value: openvidu-openvidu.apps.cluster-68v6c.68v6c.sandbox1604.opentlc.com
            - name: HTTPS_PORT
              value: "443"
            - name: HTTP_PORT
              value: "80"
            - name: KMS_URIS
              value: '["ws://kurento-0.kurento:8888/kurento"]'
            - name: LETSENCRYPT_EMAIL
              value: yono@redhat.com
            - name: OPENVIDU_CDR
              value: "false"
            - name: OPENVIDU_CDR_PATH
              value: /opt/openvidu/cdr
            - name: OPENVIDU_RECORDING
              value: "false"
            - name: OPENVIDU_RECORDING_AUTOSTOP_TIMEOUT
              value: "120"
            - name: OPENVIDU_RECORDING_CUSTOM_LAYOUT
              value: /opt/openvidu/custom-layout
            - name: OPENVIDU_RECORDING_DEBUG
              value: "false"
            - name: OPENVIDU_RECORDING_NOTIFICATION
              value: publisher_moderator
            - name: OPENVIDU_RECORDING_PATH
              value: /opt/openvidu/recordings
            - name: OPENVIDU_RECORDING_PUBLIC_ACCESS
              value: "false"
            - name: OPENVIDU_SECRET
              value: vrtest123
            - name: OPENVIDU_SESSIONS_GARBAGE_INTERVAL
              value: "900"
            - name: OPENVIDU_SESSIONS_GARBAGE_THRESHOLD
              value: "3600"
            - name: OPENVIDU_STREAMS_VIDEO_MAX_RECV_BANDWIDTH
              value: "1000"
            - name: OPENVIDU_STREAMS_VIDEO_MAX_SEND_BANDWIDTH
              value: "1000"
            - name: OPENVIDU_STREAMS_VIDEO_MIN_RECV_BANDWIDTH
              value: "300"
            - name: OPENVIDU_STREAMS_VIDEO_MIN_SEND_BANDWIDTH
              value: "300"
            - name: OPENVIDU_WEBHOOK
              value: "false"
            - name: OPENVIDU_WEBHOOK_EVENTS
              value: '[sessionCreated,sessionDestroyed,participantJoined,participantLeft,webrtcConnectionCreated,webrtcConnectionDestroyed,recordingStatusChanged,filterEventDispatched,mediaNodeStatusChanged,nodeCrashed]'
            - name: SERVER_PORT
              value: "5443"
            - name: SERVER_SSL_ENABLED
              value: "false"
          image: openvidu/openvidu-server:2.21.0
          name: openvidu-server
          ports:
            - containerPort: 5443
      restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    app: openvidu-server
  labels:
    io.openvidu.service: openvidu-server
  name: openvidu-server
spec:
  ports:
    - name: "5443"
      port: 5443
      targetPort: 5443
  selector:
    io.openvidu.service: openvidu-server
