manifest/openvidu-server-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    acme.openshift.io/status: |
      provisioningStatus:
        earliestAttemptAt: "2022-04-19T14:09:00.887051311Z"
        orderStatus: ready
        orderURI: https://acme-v02.api.letsencrypt.org/acme/order/502230860/81736958197
        startedAt: "2022-04-20T09:39:17.401203155Z"
    kubernetes.io/tls-acme: "true"
  creationTimestamp: "2022-04-18T11:02:27Z"
  labels:
    io.kompose.service: openvidu-server
  name: openvidu-server
  namespace: openvidu
  resourceVersion: "1045881"
  uid: ec92b5e8-ae2d-4b1b-9db9-12dab204babb
spec:
  host: openvidu-server-openvidu.apps.p27eai7o.eastus.aroapp.io
  port:
    targetPort: "443"
  tls:
    certificate: |
      -----BEGIN CERTIFICATE-----
      MIIGZjCCBU6gAwIBAgISBBHF0PGSOM2n0n7os+tLiol6MA0GCSqGSIb3DQEBCwUA
[...]
      mDaw8Au4xhn4Vw==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFFjCCAv6gAwIBAgIRAJErCErPDBinU/bWLiWnX1owDQYJKoZIhvcNAQELBQAw
[...]
      nLRbwHOoq7hHwg==
      -----END CERTIFICATE-----
      -----BEGIN CERTIFICATE-----
      MIIFYDCCBEigAwIBAgIQQAF3ITfU6UK47naqPGQKtzANBgkqhkiG9w0BAQsFADA/
[...]
      Dfvp7OOGAN6dEOM4+qR9sdjoSYKEBpsr6GtPAQw4dy753ec5
      -----END CERTIFICATE-----
    insecureEdgeTerminationPolicy: Redirect
    key: |
      -----BEGIN RSA PRIVATE KEY-----
      MIIJKAIBAAKCAgEA4RMwLgxGRzLijRNkXUSxo/3/Z2SlxbIla+qg55jpVjG3V6nr
[...]
      -----END RSA PRIVATE KEY-----
    termination: edge
  to:
    kind: Service
    name: openvidu-server-kms
    weight: 100
  wildcardPolicy: None
status:
  ingress:
  - conditions:
    - lastTransitionTime: "2022-04-20T09:39:16Z"
      status: "True"
      type: Admitted
    host: openvidu-server-openvidu.apps.p27eai7o.eastus.aroapp.io
    routerCanonicalHostname: router-default.apps.p27eai7o.eastus.aroapp.io
    routerName: default
    wildcardPolicy: None
